[tool.poetry]
name = "libquery"
version = "0.1.0"
description = ""
authors = ["Yu Zhang <yuzhang94@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
backoff = "^2.2.1"
tqdm = "^4.65.0"
xmltodict = "^0.13.0"
internetarchive = "^3.5.0"
slugify = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
